third_party/blink/web_tests/external/wpt/battery-status/battery-interface-idlharness.https.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS BatteryManager interface: existence and properties of interface object
PASS BatteryManager interface object length
PASS BatteryManager interface object name
PASS BatteryManager interface: existence and properties of interface prototype object
PASS BatteryManager interface: existence and properties of interface prototype object's "constructor" property
PASS BatteryManager interface: existence and properties of interface prototype object's @@unscopables property
PASS BatteryManager interface: attribute charging
PASS BatteryManager interface: attribute chargingTime
PASS BatteryManager interface: attribute dischargingTime
PASS BatteryManager interface: attribute level
PASS BatteryManager interface: attribute onchargingchange
PASS BatteryManager interface: attribute onchargingtimechange
PASS BatteryManager interface: attribute ondischargingtimechange
PASS BatteryManager interface: attribute onlevelchange
Harness: the test ran to completion.

